# add_executable(rpcClient client.cpp)
# add_executable(rpcGroupClient groupClient.cpp)
# add_executable(rpcServer server.cpp)
# target_link_libraries(rpcClient boost_thread boost_system openp2p openp2p-udp)
# target_link_libraries(rpcGroupClient boost_thread boost_system openp2p openp2p-udp)
# target_link_libraries(rpcServer boost_thread boost_system openp2p openp2p-udp)
